--- a/03_JS/DOM/styles.css
+++ b/03_JS/DOM/styles.css
@@ -4,9 +4,23 @@
     padding: 0;
 }
 
-h1 {
-    color: #333;
-    font-size: 2em;
-    text-align: center;
-    margin-top: 20px;
+#bulb {
+    width: 100px;
+    height: 100px;
+    margin: 50px auto;
+    border-radius: 50%;
+    background-color: #9e9e9e;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+button {
+    display: block;
+    width: 100px;
+    margin: 20px auto;
+    padding: 10px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
